# vocabulary-app

./: .env_example  .gitignore  README.md  alembic.ini  docker-compose.yaml  pyproject.toml
alembic/: env.py
api/: __init__.py  dependencies.py
api/crud/: grammar_element_crud.py  language_crud.py  topic_crud.py  word_crud.py
api/router/: grammar_element_router.py  language_router.py  topic_router.py  word_router.py
api/schemas/: grammar_element_schemas.py  language_schemas.py  topic_schemas.py  word_schemas.py
auth/: crud.py  dependencies.py  router.py  schemas.py  utils.py
src/: config.py  main.py
src/models/: __init__.py  db_helper.py  grammar_element.py  language.py  language_user_association.py  topic.py  topic_word_association.py  user.py  word.py
